# MVC

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
include/: base_primitive.h  controller.h  model.h  view.h
src/: controller.cpp  main.cpp  model.cpp  view.cpp
